02-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fintech-db
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: fintech-db
  template:
    metadata:
      labels:
        app: fintech-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        hostPath:
          path: /mnt/data/postgres
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: fintech-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
