04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fintech-frontend
  template:
    metadata:
      labels:
        app: fintech-frontend
    spec:
      containers:
      - name: frontend
        image: apolidev/fintech-app-frontend:latest # Imagen de Docker Hub del frontend (React) pendiente con la url del backend que se obtiene del servicio LoadBalancer del backend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: fintech-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
